<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">인생 그래프</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="event">사건</string>
    <string name="age">나이</string>
    <string name="score">점수</string>
    <string name="category">종류</string>
    <string name="done">확인</string>
    <string name="cancel">취소</string>

    <string name="color_swatch_description">Color %1$d</string>
    <string name="color_swatch_description_selected">Color %1$d selected</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="dialog_title">새 종류 만들기</string>

    <string name="helpMessage">
        "
 안녕하세요. 인생 그래프 앱을 사용하시게 된 여러분 환영합니다.

 처음 이용해보시는 분들을 위해서 사용법을 알려드리겠습니다.

 1. 화면 오른쪽 상단에 있는 '+' 버튼을 눌러주세요.

 2. 만들 인생 그래프의 제목을 입력하시고 확인을 눌러주세요.

 3. 빈 그래프의 모습과 4개의 버튼이 보이게 됩니다.
  - 사건(event) 추가 : 오른쪽 상단의 '+' 버튼은 사건을 추가하는 버튼입니다. 버튼을 클릭하게 되면 사건을 추가하는 화면으로 이동하게 됩니다. 사건의 항목에는 내용을 입력하고 나이를 선택합니다. 그리고 그 사건에 대한 점수를 스스로 매깁니다. 그리고 어떤 종류의 사건인지 선택합니다. 만약 해당되는 사건의 종류가 없다면 '+' 버튼을 클릭하여 새로운 종류를 만들 수 있습니다. 새로운 종류를 만드실 때는 종류에 해당하는 특정한 색깔을 선택할 수 있습니다. 이 색깔을 통해서 좀 더 쉽게 그래프를 보실 수 있습니다.

  - 수정 : '+' 버튼 왼쪽의 연필 모양의 버튼을 클릭하면 사건 또는 사건의 종류를 수정하실 수 있습니다. 만약 사건을 수정하고 싶으시면 '사건'을 클릭하시고, 사건의 종류를 수정하시고 싶으시면 '종류'를 클릭하시면 됩니다. 클릭하게 되면 사건 또는 종류의 목록으로 이동하게 됩니다. 수정 또는 삭제하고 싶은 항목을 클릭하신 후, 삭제하고 싶으시면 왼쪽 상단의 삭제버튼을, 수정하고 싶으시면 오른쪽 상단의 수정버튼을 누르시면 됩니다.

  - 사건 표시 : 오른쪽 아래의 버튼을 클릭하시면 사건의 종류가 나타납니다. 보시고 싶은 항목을 클릭하신 후 확인 버튼을 누르면 클릭한 종류에 대해서만 사건들을 화면에 나타내 볼 수 있습니다. 만약 모든 종류를 보고 싶다면 아무 것도 체크되어 있지 않은 상태로 확인을 누르시면 됩니다.

  - 사건 이름 : 왼쪽 상단의 눈 모양 버튼을 클릭하면 사건의 이름을 보이게 하거나 보이지 않게 할 수 있습니다.

 4. 새로운 그래프를 만들고 싶거나 저장하고 싶으시면 뒤로 가기 버튼을 통해서 1번의 화면으로 돌아가면 됩니다. 앱을 종료하시면 그래프를 이미지 파일로 보실 수 있습니다.



 이 앱을 통해서 여러분의 인생을 그려보세요! 도움말은 메뉴버튼을 통해서 다시 보실 수 있습니다.
        "
    </string>
</resources>
