<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:id="@+id/event_container">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/white_rect"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        />
    <TextView
        android:id="@+id/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/event"
        android:textSize="9pt"/>
    <EditText
        android:id="@+id/event_edittext"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@id/event"
        android:layout_toEndOf="@id/event"
        android:layout_alignTop="@id/event"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:textSize="8pt"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:background="@drawable/rounded_rectangle"/>
    <ImageView
        android:id="@+id/event_line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/gray_line"
        android:layout_below="@id/event"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/age"
        android:textSize="9pt"
        android:layout_below="@id/event_line1"/>
    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@id/age"
        android:layout_toEndOf="@id/age"
        android:layout_alignTop="@id/age"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_rectangle"
        />
    <ImageView
        android:id="@+id/event_line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/gray_line"
        android:layout_below="@id/age"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/score"
        android:textSize="9pt"
        android:layout_below="@id/event_line2"/>
    <Spinner
        android:id="@+id/score_spinner"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@id/score"
        android:layout_toEndOf="@id/score"
        android:layout_alignTop="@id/score"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_rectangle"
        />
    <ImageView
        android:id="@+id/event_line3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/gray_line"
        android:layout_below="@id/score"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/category"
        android:textSize="9pt"
        android:layout_below="@id/event_line3"/>
    <ImageButton
        android:id="@+id/event_add_cate"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/add_icon"
        android:contentDescription="@null"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:layout_alignTop='@id/category'
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_toLeftOf="@id/event_add_cate"
        android:layout_toStartOf="@id/event_add_cate"
        android:layout_alignLeft="@id/age_spinner"
        android:layout_alignStart="@id/age_spinner"
        android:layout_alignTop="@id/category"
        android:textSize="8pt"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_rectangle"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_marginTop="90dp">
        <Button
            android:id="@+id/event_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"/>
        <Button
            android:id="@+id/event_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:id="@+id/logo_kr"
        android:src="@drawable/kedi_logo_kr"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"/>
     />
</RelativeLayout>
</ScrollView>